# agentmux

./: .gitignore  Cargo.toml  README.md
.auxiliary/configuration/: AGENTS.md  copier-answers--agents.yaml  mcp-servers.json
.github/workflows/: core--initializer.yaml  releaser.yaml  tester.yaml
data/configuration/: bundle.toml  coders.toml  policies.toml  tui.toml
documentation/: comparisons.md
documentation/development/: README.md
documentation/usage/: README.md  operations.md  tui.md
src/: README.md  commands.rs  configuration.rs  envelope.rs  lib.rs  relay.rs
src/acp/: client.rs  mod.rs  render.rs
src/commands/: README.md  down.rs  host.rs  lifecycle.rs  list.rs  look.rs  mod.rs  raww.rs  send.rs  shared.rs  tui.rs  up.rs
src/mcp/: README.md  mod.rs
src/relay/: README.md  acp_client.rs  acp_state.rs  async_worker.rs  authorization.rs  delivery.rs  handlers.rs  lifecycle.rs  quiescence.rs  startup_state.rs  stream.rs  tmux.rs  ui_delivery.rs
src/relay/delivery/: acp_client.rs  acp_delivery.rs  acp_state.rs  async_worker.rs  dispatch.rs  mod.rs  quiescence.rs  results.rs  ui_delivery.rs
src/runtime/: README.md  association.rs  bootstrap.rs  error.rs  inscriptions.rs  mod.rs  paths.rs  signals.rs  starter.rs  tui_sender.rs  tui_session.rs
src/tui/: README.md  input.rs  mod.rs  render.rs  state.rs  target.rs  workbench.rs
src/tui/state/: compose.rs  history.rs  mod.rs  relay.rs
tests/: README.md  integration.rs  unit.rs
tests/integration/: cli_surface.rs  mcp_tool_surface.rs  relay_delivery_async.rs  relay_delivery_prompt.rs  relay_delivery_runtime.rs  relay_delivery_sync.rs  runtime_bootstrap.rs  session_relay_acp.rs  session_relay_delivery.rs  session_relay_look.rs  session_relay_reconciliation.rs  session_relay_stream.rs
tests/integration/acp/: coalescing.rs  helpers.rs  lifecycle.rs  look.rs  mod.rs  raww.rs  recovery.rs  serialization.rs  stop_reason.rs  worker_state.rs
tests/integration/cli/: help.rs  helpers.rs  host.rs  lifecycle.rs  list.rs  look.rs  mod.rs  raww.rs  send.rs  tui.rs
tests/integration/mcp/: help.rs  helpers.rs  list.rs  look.rs  mod.rs  raww.rs  (+1 more)
tests/smoke/: prompt_readiness_manual.md
tests/unit/: association.rs  configuration.rs  envelope.rs  relay.rs  relay_stream.rs  relay_stream_client.rs  runtime_inscriptions.rs  runtime_paths.rs  runtime_starter.rs  tui.rs  tui_sender.rs  tui_session.rs  tui_workbench.rs
(+252 files in other folders)
