[package]
name = "tmuxmux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
libc = "0.2.171"
rmcp = { version = "0.8.0", features = ["transport-io"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.18.0"
