[package]
name = "agentmux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
crossterm = "0.28.1"
libc = "0.2.171"
ratatui = "0.29.0"
rmcp = { version = "1.1.0", features = ["transport-io"] }
regex = "1.11.1"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["macros", "process", "rt-multi-thread"] }
toml = "0.8.23"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.18.0"
