[package]
name = "agentmux"
version = "0.2.0"
edition = "2024"
rust-version = "1.90"
description = "Multi-agent coordination runtime with inter-agent messaging across CLI, MCP, tmux, and ACP."
license = "Apache-2.0"
repository = "https://github.com/emcd/agentmux"
homepage = "https://github.com/emcd/agentmux"
documentation = "https://docs.rs/agentmux"
readme = "README.md"
keywords = ["agent", "mcp", "cli", "tmux", "coordination"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/data/configuration/*.toml",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[dependencies]
anyhow = "1.0.97"
crossterm = "0.28.1"
libc = "0.2.171"
ratatui = "0.29.0"
rmcp = { version = "1.1.0", features = ["transport-io"] }
regex = "1.11.1"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["macros", "process", "rt-multi-thread"] }
toml = "0.8.23"
uuid = { version = "1.18.1", features = ["v4"] }

[[bin]]
name = "agentmux-acp"
path = "src/bin/agentmux_acp.rs"

[dev-dependencies]
tempfile = "3.18.0"
